首页样式完成

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npm run dev"
   },
   "devDependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
@@ -28,6 +29,7 @@
     "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
-    "mint-ui": "^2.2.11"
+    "mint-ui": "^2.2.11",
+    "mui": "^0.0.1"
   }
 }
