--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "moment": "^2.19.2",
     "node-sass": "^4.6.1",
     "sass": "^1.0.0-beta.3",
     "sass-loader": "^6.0.6",
